# energy-intelligence

./: .gitignore  README.md  SPEC.md  pyproject.toml
darkenergy/: __init__.py  cli.py  config.py  db.py  models.py
darkenergy/actions/: adapters.py  base.py  builtin.py
darkenergy/ai/: claude_phraser.py  openai_phraser.py  prompts.py
darkenergy/analytics/: anomalies.py  forecast.py  frames.py  metrics.py
darkenergy/events/: bus.py
darkenergy/seed/: loader.py
darkenergy/simulators/: cli.py
darkenergy/web/: app.py  service.py
darkenergy/web/static/: app.css  app.js
darkenergy/web/templates/: base.html  dashboard.html  index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.tsx  styles.css  types.ts
hauswatt/: __init__.py  cli.py  config.py  db.py  models.py
hauswatt/actions/: builtin.py
hauswatt/ai/: chat_agent.py  llm_phraser.py  phraser.py  prompts.py  template_phraser.py
hauswatt/analytics/: costing.py  facts.py  status.py
hauswatt/ingest/: mapping.py
hauswatt/rules/: __init__.py  base.py  contract.py  device_choice.py  fault.py
hauswatt/seed/: loader.py
hauswatt/simulators/: cli.py
hauswatt/web/: app.py  service.py
tests/: conftest.py  test_anomalies.py  test_ingest_balance.py  test_metrics.py  test_phraser_grounding.py  test_rules.py  test_web_api.py
