[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hauswatt"
version = "0.1.0"
description = "HausWatt — customer intelligence layer over residential energy telemetry"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
hauswatt = "hauswatt.cli:main"

[tool.setuptools.packages.find]
include = ["hauswatt*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
